TEST_PROGRAMS/VALID/04/tricky-identifiers.go
package trickyIdentifiers

func main() {
    var if3 int
    var for4 int
    var var5 int
    var break1 int
    var continueeeeee int
    var printlnln int
    var printlm int
    var reader int
    var READ int
    var typer int
    var switcher int
    var caser int
    var packageHAFJH int
    var functor int
}
