TEST_PROGRAMS/INVALID_TYPECHECK/typecast_inttostring.go

package main;

func main (){

    var x int = 5;
    var y string = string(x);

}
